--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,17 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSCameraUsageDescription</key>
+    <string>Your Description</string>
+
+    <key>com.apple.developer.nfc.readersession.felica.systemcodes</key>
+    	<array>
+    		<string>0000</string>
+    	</array>
+    <key>NFCReaderUsageDescription</key>
+    <string>Read NFC Tags</string>
+
+
 </dict>
 </plist>
